[package]
name = "blueplug"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.1"
btsensor = "0.1.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde"] }
async-trait = "0.1.74"
color-eyre = "0.6.2"
ruuvi-sensor-protocol = "0.6.1"
async-stream = "0.3.5"
futures-core = "0.3.29"
futures-util = "0.3.29"
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.9", features = ["derive"] }
